muted out start game box to make question box visible and easy to fix

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -49,7 +49,7 @@ header {
     color: purple;
 }
 
-#start-game {
+/* #start-game {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -66,7 +66,7 @@ header {
     border-radius: 30px 30px;
     left: 0;
     right: 0;
-}
+} */
 
 #text {
     color: black;
@@ -82,3 +82,13 @@ header {
 }
 
 /* QUESTION BOX SECTION */
+#question {
+    text-align: center;
+}
+
+#answer-box {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
